@@ -21,7 +21,9 @@ Mod(84, 148)
 [599, 599, 599, 599]
 [1000000003700000003419, 1000000003700000003419, 1000000003700000003419, 100
 0000003700000003419]
-[8000000029600000027360, [1000000003700000003420, 2, 2, 2]]
+[8000000029600000027360, [1000000003700000003420, 2, 2, 2], [697836335347937
+5237713, 5000000019000000018049, 15000000057000000054151, 100000000380000000
+36101]]
 [392658269393604457523, 74265827068860445865, 1, 1]~
 [8000000029600000027360, [1000000003700000003420, 2, 2, 2], [697836335347937
 5237713, 5000000019000000018049, 15000000057000000054151, 100000000380000000
@@ -189,4 +191,4 @@ x^2
 [15, [3, 1; 5, 1]]
 [11]
 45
-Total time spent: 1479
+Total time spent: 1838
